# py2ddoc

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
py2ddoc/: __init__.py  doc.py  exceptions.py  fields.py  parser.py  tsl.py  tsl_signed.xml  verifier.py
stubs/2d-doc/: README.md  pyproject.toml
stubs/2ddoc/: README.md  pyproject.toml
stubs/twoddoc/: README.md  pyproject.toml
stubs/twoddoc/twoddoc/: __init__.py
tests/: test_doc.py  test_parser.py  test_tsl.py
