[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py2ddoc"
version = "0.1.0"
description = "Decode and verify French ANTS 2D-Doc barcodes (QR/DataMatrix)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "py2ddoc contributors" }]
keywords = ["2ddoc", "ants", "france", "barcode", "qrcode", "datamatrix", "signature", "ecdsa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/Game-K-Hack/py2ddoc"
"Bug Tracker" = "https://github.com/Game-K-Hack/py2ddoc/issues"
Documentation = "https://github.com/Game-K-Hack/py2ddoc#readme"

[tool.hatch.build.targets.wheel]
packages = ["py2ddoc"]

[tool.hatch.build.targets.wheel.force-include]
"py2ddoc/tsl_signed.xml" = "py2ddoc/tsl_signed.xml"

[tool.hatch.build.targets.sdist]
include = ["py2ddoc/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
